2006-11-15  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/rtspconnection.c: (read_body):
	Don't set a data pointer to NULL and a size > 0 when we deal
	with empty packets.

	* gst/rtsp/rtspmessage.c: (rtsp_message_new_response),
	(rtsp_message_init_response), (rtsp_message_init_data),
	(rtsp_message_unset), (rtsp_message_free),
	(rtsp_message_take_body):
	Check that we can't create invalid empty packets. 

2006-11-15  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Mark Nauwelaerts  <manauw at skynet be>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_add_interfaces),
	(gst_matroska_mux_class_init), (gst_matroska_pad_free),
	(gst_matroska_mux_reset), (gst_matroska_mux_handle_sink_event),
	(gst_matroska_mux_request_new_pad), (gst_matroska_mux_release_pad),
	(gst_matroska_mux_track_header), (gst_matroska_mux_start),
	(gst_matroska_mux_write_simple_tag), (gst_matroska_mux_finish):
	* gst/matroska/matroska-mux.h:
	  Add basic tag writing support; implement releasing pads (#374658).

2006-11-15  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream),
	(gst_matroska_demux_audio_caps):
	  Handle opaque/unspecified A_AAC audio codec ID (fixes #374737).

2006-11-14  David Schleef  <ds@schleef.org>

	* gst/matroska/matroska-mux.c: Add Dirac fourcc.

2006-11-14  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Sergey Scobich  <sergey.scobich at gmail com>

	* win32/vs8/gst-plugins-good.sln:
	* win32/vs8/libgst1394.vcproj:
	* win32/vs8/libgstaasink.vcproj:
	* win32/vs8/libgstalaw.vcproj:
	* win32/vs8/libgstalpha.vcproj:
	* win32/vs8/libgstalphacolor.vcproj:
	* win32/vs8/libgstannodex.vcproj:
	* win32/vs8/libgstapetag.vcproj:
	* win32/vs8/libgstaudiofx.vcproj:
	* win32/vs8/libgstauparse.vcproj:
	* win32/vs8/libgstautodetect.vcproj:
	* win32/vs8/libgstavi.vcproj:
	* win32/vs8/libgstcacasink.vcproj:
	* win32/vs8/libgstcdio.vcproj:
	* win32/vs8/libgstcutter.vcproj:
	* win32/vs8/libgstdv.vcproj: