@@ -1,3 +1,12 @@
+2006-11-16  Stefan Kost  <ensonic@users.sf.net>
+
+	Patch by: Ville Syrjala <ville.syrjala@movial.fi>
+
+	* gst/rtp/gstrtph263pay.c:
+	* gst/rtp/gstrtph263pdepay.c:
+	* gst/rtp/gstrtph263ppay.c:
+	  Specify H.263 variant and version in the caps (fixes #361637)
+
 2006-11-15  Wim Taymans  <wim@fluendo.com>
 
 	* gst/rtsp/rtspconnection.c: (read_body):
